[gd_scene load_steps=2 format=3 uid="uid://status_effect_icon_scene"]

[ext_resource type="Script" path="res://scripts/ui/status_effect_icon.gd" id="1"]

[node name="StatusEffectIcon" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1")

[node name="IconBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="IconTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="TypeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="StackLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -18.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "x1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="DurationBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
max_value = 10.0
value = 10.0
show_percentage = false
